manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: hello-server
    spec:
      containers:
      - name: webserver
        image: hossainemruz/sample-web-server:v1
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
