manifests/sample-ping-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-ping-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-client
  template:
    metadata:
      labels:
        app: ping-client
    spec:
      containers:
      - name: webserver
        image: hossainemruz/sample-ping-client:v1
