manifests/app-bar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
        - name: webserver
          image: hossainemruz/sample-web-server:v1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bar-service
spec:
  type: ClusterIP
  selector:
    app: bar
  ports:
    - port: 80
      targetPort: 8080
