manifests/app-foo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
        - name: webserver
          image: hossainemruz/sample-web-server:v1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: foo-service
spec:
  type: ClusterIP
  selector:
    app: foo
  ports:
    - port: 80
      targetPort: 8080
