manifests/cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: hello-server
  ports:
    - port: 80
      targetPort: 8080
