manifests/load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer-service
spec:
  type: LoadBalancer
  selector:
    app: hello-server
  ports:
    - port: 80
      targetPort: 8080
