manifests/node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port-service
spec:
  type: NodePort
  selector:
    app: hello-server
  ports:
    - port: 80
      targetPort: 8080
