manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /foo(/|$)(.*) # matches /foo and /foo/anything
        backend:
          service:
            name: foo-service
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: /bar(/|$)(.*) # matches /bar and /bar/anything
        backend:
          service:
            name: bar-service
            port:
              number: 80
